syntax = "proto3";

package chat;

service ChatService {
  rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse);
  rpc StreamNotifications(stream NotificationRequest) returns (stream NotificationResponse);
}

message SendNotificationRequest {
  string roomId = 1;  // 채팅방 ID
  string userId = 2;  // 수신자 ID
  string message = 3;  // 알림 내용
}

message SendNotificationResponse {
  string status = 1;   // 처리 상태 (success, failure)
}

message NotificationRequest {
  string roomId = 1;
  string userId = 2;
  string message = 3;
}

message NotificationResponse {
  string roomId = 1;
  string userId = 2;
  string message = 3;
  string timestamp = 4;
}